Fix disconnect button being off center in mobile and chat messages breaking when having malformed og meta data

--- a/streams-react/src/components/ChatHeader/ChatHeader.module.css
+++ b/streams-react/src/components/ChatHeader/ChatHeader.module.css
@@ -30,17 +30,3 @@
 .chat__online {
   align-self: flex-start;
 }
-.close__button {
-  position: absolute;
-  top: 5px;
-  right: 5px;
-  color: #EEEEEE;
-  cursor: pointer;
-  transition: all 0.1s ease-out;
-}
-.close__button:hover, .close__button:focus {
-  color: white;
-}
-.close__icon {
-  font-size: 2em;
-}
