--- a/streams-react/src/components/ChatUserMessage/ChatUserMessage.module.css
+++ b/streams-react/src/components/ChatUserMessage/ChatUserMessage.module.css
@@ -79,3 +79,6 @@ iframe {
   width: 100%;
   overflow: hidden;
 }
+.hidden {
+  display: none;
+}
